--- a/templates/index.html
+++ b/templates/index.html
@@ -1,11 +1,12 @@
 <!DOCTYPE html>
 <html lang="en">
-    <head id = "top">
+    <head>
         <script type="text/javascript" src="../client.js"> </script>
         <link rel = "stylesheet" href="../style.css">
-        <div><h4>Jupyter Notebook</h4></div>
+        
     </head>
     <body>
+    <div id = "top"><h4 id = "titl">Jupyter Notebook</h4></div>
     <div id="nav">
         <div id="buttons" class="text-center">
             <button onclick="addNewCell()">Add Cell</button>
